--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <section id="certification">
         <h3>Certification</h3>
-        <p><b>Cloud Applied Generative AI Engineering:</b><br />Governor House (Ongoing)</p>
+        <p><b>GIAIC:</b><br />Governor House (Ongoing)</p>
         <p><b>Arts Contest Certificate:</b><br />HRCA</p>
         <p><b>High Achiever SSC Part I:</b><br />AKUEB</p>
         <p><b>High Achiever SSC Part II:</b><br />AKUEB</p>
@@ -42,9 +42,7 @@
         <p><b>Gender:</b> Female</p>
         <p><b>Date of Birth:</b> 2007-06-29</p>
         <p><b>Nationality:</b> Pakistani</p>
-        <p><b>Province:</b> Sindh</p>
         <p><b>City:</b> Karachi</p>
-        <p><b>Address:</b> 6/141, Kaghzi Bazar, Mithadar, Karachi</p>
 
         <p>
           <b>Email:</b>
@@ -82,6 +80,7 @@
           <li>C++</li>
           <li>HTML, CSS, Tailwind</li>
           <li>JavaScript, TypeScript</li>
+          <li>Python</li>
           <li>Next.js</li>
           <li>MS Office (Word, Excel, PowerPoint, Access)</li>
           <li>Google Docs</li>
@@ -92,6 +91,7 @@
 
       <section id="work">
         <h3>Work Experience</h3>
+        <p><b>Internship:</b> Web Development at CODEX</p>
         <p>Seeking an opportunity as a fresher candidate to start my professional career.</p>
       </section>
 
