--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <section id="work">
         <h3>Work Experience</h3>
         <p><b>Internship:</b> Web Development at CODEX</p>
-        <p>Seeking an opportunity as a fresher candidate to start my professional career.</p>
+        <p>Seeking an opportunity as a candidate to start my professional career.</p>
       </section>
 
     </div>
